[tool.poetry]
name = "mock-alchemy"
version = "0.2.6"
description = "SQLAlchemy mock helpers."
license = "MIT"
homepage = "https://github.com/rajivsarvepalli/mock-alchemy"
repository = "https://github.com/rajivsarvepalli/mock-alchemy"
authors = ["Rajiv Sarvepalli <rajiv@sarvepalli.net>", "Miroslav Shubernetskiy <mail@miki725.com>", "Serkan Hoscai <serkan@hosca.com"]
readme = "READMEPYPI.md"
keywords = ["sqlalchemy mock testing", "sqlalchemy mock", "mock sqlalchemy"]
documentation = "https://mock-alchemy.readthedocs.io"
classifiers=[
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Development Status :: 2 - Pre-Alpha",
]

[tool.poetry.urls]
Changelog = "https://github.com/rajivsarvepalli/mock-alchemy/releases"

[tool.poetry.dependencies]
python = "^3.7"
SQLAlchemy = "^2.0.6"


[tool.poetry.dev-dependencies]
pytest = "^7.2.2"
coverage = {extras = ["toml"], version = "^6.0"}
pytest-cov = "^4.0.0"
black = "^23.1.0"
flake8 = "^3.9.1"
flake8-bandit = "^3.0.0"
flake8-bugbear = "^21.4.3"
flake8-import-order = "^0.18.1"
safety = "^2.3.4"
mypy = "^1.1"
typeguard = "^2.10.0"
flake8-annotations = "^2.4.1"
flake8-docstrings = "^1.6.0"
darglint = "^1.8.1"
xdoctest = "^1.1.1"
Sphinx = "^5.3.0"
codecov = "^2.1.11"
pydata-sphinx-theme = "^0.13.1"
sphinx-copybutton = "^0.5.1"
pep8-naming = "^0.12.1"
Pygments = "^2.9.0"
sphinx-autodoc-typehints = "^1.12.0"
flake8-rst-docstrings = "^0.2.3"
pre-commit = "^2.21.0"
pre-commit-hooks = "^4.0.1"
isort = "^5.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["mock_alchemy"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.isort]
src_paths = ["src", "test"]
force_single_line = true
